set (CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 2.8)
project( runeDemo )
find_package( OpenCV REQUIRED )
find_package( X11 REQUIRED )
FIND_PACKAGE( Boost 1.58 REQUIRED COMPONENTS system filesystem)
INCLUDE_DIRECTORIES( SYSTEM ${Boost_INCLUDE_DIR} )

add_executable( runeDemo display.cpp )
target_link_libraries( runeDemo ${OpenCV_LIBS} X11  ${Boost_LIBRARIES} )
